Bug 710950 - JSScript::function_ should be barriered; r=billm

The field is immutable, so we can return an unwrapped pointer and don't have to
worry about it for incremental barriers.  We do need post barriers on it during
init for detecting cross-generation pointers, however.  Just make it a normal
HeapPtr.