js/src/jsscript.h
@@ -528,8 +528,8 @@ struct JSScript : public js::gc::Cell {
     js::ScriptOpcodeCounts pcCounters;
 
   private:
-    js::DebugScript *debug;
-    JSFunction      *function_;
+    js::DebugScript     *debug;
+    js::HeapPtrFunction function_;
   public:
 
     /*
@@ -537,7 +537,7 @@ struct JSScript : public js::gc::Cell {
      * NULL for global and eval scripts.
      */
     JSFunction *function() const { return function_; }
-    void setFunction(JSFunction *fun) { function_ = fun; }
+    void setFunction(JSFunction *fun);
 
 #ifdef JS_CRASH_DIAGNOSTICS
     /* All diagnostic fields must be multiples of Cell::CellSize. */
